Multiple code style fixes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
       "ecmaVersion": 6
     },
     "rules":{
-      "max-len": [2, 120]
+      "max-len": [2, 120],
+      "require-jsdoc": 0,
+      "valid-jsdoc": 0
     }
 }
